--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
+@import 'assets/css/form.css';
 
 * {
   box-sizing: border-box;
@@ -26,6 +27,9 @@ body {
 }
 
 .container {
-  display: flex;
   padding: 50px;
+}
+
+.d-flex {
+  display: flex;
 }
